feat(event-approval): Add user event approval
